<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaNovoFeedbacks">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="601dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/activity_tela_novo_feedback_feedback" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_tela_novo_feedback_matricula" />

        <Spinner
            android:id="@+id/spinnerMatricula"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/activity_tela_novo_feedback_situação" />

        <EditText
            android:id="@+id/editTextTextSituacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/activity_tela_novo_feedback_comportamento" />

        <EditText
            android:id="@+id/editTextTextComportamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/activity_tela_novo_feedback_impacto" />

        <EditText
            android:id="@+id/editTextTextImpacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/activity_tela_novo_feedback_salvar" />

        <Button
            android:id="@+id/buttonExcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_tela_novo_feedback_excluir" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>